[Ajith] || Log4J and TestNG implementation